src/test/deca/context/invalid/affectation-wrongTypeAffectationIntBool.context
affectation-wrongTypeAffectationIntBool.deca:4: